--- a/app/src/main/res/layout/fragment_base_component.xml
+++ b/app/src/main/res/layout/fragment_base_component.xml
@@ -38,5 +38,12 @@
             android:layout_marginTop="@dimen/space_16"
             android:text="NavigationRail" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_top_app_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_16"
+            android:text="TopAppBar" />
+
     </LinearLayout>
 </ScrollView>
