--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -41,4 +41,16 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!-- topappbarActivity -->
+    <style name="text_extended">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/guide_text</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_collapsed">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/pink_strong</item>
+    </style>
+
 </resources>
