バックキー追加

--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -7,13 +7,13 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/text_page_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/space_16"
-        android:text="@string/bottom_navigation_activity_title"
-        android:textColor="@color/guide_text" />
+        app:navigationIcon="@drawable/back"
+        app:title="@string/bottom_navigation_activity_title"
+        app:titleCentered="true" />
 
     <ScrollView
         android:layout_width="match_parent"
