--- a/app/src/main/res/layout/activity_slider.xml
+++ b/app/src/main/res/layout/activity_slider.xml
@@ -11,13 +11,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                style="@style/text_page_title"
-                android:layout_width="wrap_content"
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_16"
-                android:text="@string/slider_activity_title"
-                android:textColor="@color/guide_text" />
+                app:navigationIcon="@drawable/back"
+                app:title="@string/slider_activity_title"
+                app:titleCentered="true" />
 
             <com.google.android.material.slider.Slider
                 android:id="@+id/slider"
