--- a/app/src/main/res/layout/activity_top_app_bar.xml
+++ b/app/src/main/res/layout/activity_top_app_bar.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/text_page_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar_page"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/space_16"
-        android:text="@string/top_app_bar_activity_title" />
+        app:navigationIcon="@drawable/back"
+        app:title="@string/top_app_bar_activity_title"
+        app:titleCentered="true" />
 
     <TextView
         android:layout_width="wrap_content"
