--- a/app/src/main/res/layout/activity_bottom_sheet.xml
+++ b/app/src/main/res/layout/activity_bottom_sheet.xml
@@ -7,12 +7,13 @@
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        style="@style/text_page_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/space_16"
-        android:text="@string/bottom_sheet_activity_title" />
+        app:navigationIcon="@drawable/back"
+        app:title="@string/bottom_sheet_activity_title"
+        app:titleCentered="true" />
 
     <Button
         android:id="@+id/button_standard_bottom_sheet"
