--- a/app/src/main/res/layout/activity_checkbox.xml
+++ b/app/src/main/res/layout/activity_checkbox.xml
@@ -12,18 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/checkbox_title"
-        style="@style/text_page_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/space_16"
-        android:text="@string/checkbox_activity_title"
-        android:textColor="@color/guide_text"
-        app:layout_constrainedHeight="true"
-        app:layout_constraintBottom_toTopOf="@id/checkbox_child_1"
-        app:layout_constraintLeft_toRightOf="@id/guide"
-        app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:navigationIcon="@drawable/back"
+            app:title="@string/checkbox_activity_title"
+            app:titleCentered="true"
+            app:layout_constraintBottom_toTopOf="@id/checkbox_child_1"
+            app:layout_constraintLeft_toRightOf="@id/guide"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <CheckBox
         android:id="@+id/checkbox_child_1"
@@ -32,7 +30,7 @@
         android:text="@string/checkbox_normal"
         android:textColor="@color/guide_text"
         app:layout_constraintLeft_toRightOf="@id/guide"
-        app:layout_constraintTop_toBottomOf="@id/checkbox_title" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <CheckBox
         android:id="@+id/checkbox_child_2"
