--- a/app/src/main/res/layout/activity_picker.xml
+++ b/app/src/main/res/layout/activity_picker.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.google.android.material.textview.MaterialTextView
-        style="@style/text_page_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/guide_text"
-        android:layout_margin="@dimen/space_16"
-        android:text="@string/date_picker_activity_title" />
+        app:navigationIcon="@drawable/back"
+        app:title="@string/date_picker_activity_title"
+        app:titleCentered="true" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_date_single_picker"
