--- a/app/src/main/res/layout/activity_radio_button.xml
+++ b/app/src/main/res/layout/activity_radio_button.xml
@@ -7,13 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        style="@style/text_page_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/space_16"
-        android:text="@string/radio_button_activity_title"
-        android:textColor="@color/guide_text" />
+        app:navigationIcon="@drawable/back"
+        app:title="@string/radio_button_activity_title"
+        app:titleCentered="true" />
 
     <RadioGroup
         android:checkedButton="@+id/enabled_selected"
