--- a/app/src/main/res/layout/activity_switch.xml
+++ b/app/src/main/res/layout/activity_switch.xml
@@ -7,12 +7,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/text_page_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/space_16"
-        android:text="@string/switch_activity_title" />
+        app:navigationIcon="@drawable/back"
+        app:title="@string/switch_activity_title"
+        app:titleCentered="true" />
 
     <com.google.android.material.materialswitch.MaterialSwitch
         android:layout_width="wrap_content"
